--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "react-swipeable": "^7.0.1",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
